# automated_planning

./: README.md  problem.pddl
3.1/: domain.pddl  problem.pddl  sas_plan
3.2/: domain.pddl  problem.pddl
3.2/version 1/: domain.pddl  opt-hlmrd  problem.pddl  sat-aibr  sat-hadd
3.2/version 2/: domain.pddl  downward-add  downward-blind  downward-ff  downward-goalcount  downward-hmax  lama-first  problem.pddl
3.3/: domain.hddl  plan  problem.hddl
3.4/: domain.pddl  plan 1  plan 2  problem.pddl
3.5/assignment_3_5/: CMakeLists.txt  package.xml
3.5/assignment_3_5/launch/: commands  plansys2_simple_example_launch.py
3.5/assignment_3_5/pddl/: domain.pddl  problem.pddl
3.5/assignment_3_5/src/: back_to_depot_action_node.cpp  empty_box_action_node.cpp  fill_action_node.cpp  load_action_node.cpp  move_carrier_action_node.cpp  serve_person_action_node.cpp  unload_action_node.cpp
